[package]
name = "csv-rs"
version = "0.1.0"
authors = ["fangbaoshun <fangbaoshun@hygon.cn>"]
edition = "2021"
description = "Library for HYGON CSV"
readme = "README.md"
keywords = ["hygon", "csv"]

[features]
hw_tests = []

[dependencies]
openssl = "0.10.55"
iocuddle = "0.1"
static_assertions = "^1.1.0"
