[package]
name = "csv-rs"
version = "0.1.0"
authors = ["fangbaoshun <fangbaoshun@hygon.cn>"]
edition = "2021"
description = "Library for HYGON CSV"
readme = "README.md"
keywords = ["hygon", "csv"]

[features]
hw_tests = []
dangerous_hw_tests = ["hw_tests"]

[dependencies]
libc = "0.2"
openssl = { version = "0.10.63", features = ["vendored"] }
openssl-sys = "0.9.99"
iocuddle = "0.1.1"
static_assertions = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
codicon = "3.0"
rand = "0.8"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
bitfield = "^0.13"
bitflags = "1.2"
dirs = "5.0"

[dev-dependencies]
serial_test = "2.0"