[package]
name = "csv-rs"
version = "0.1.0"
authors = ["fangbaoshun <fangbaoshun@hygon.cn>"]
edition = "2021"
description = "Library for HYGON CSV"
readme = "README.md"
keywords = ["hygon", "csv"]

[features]
hw_tests = []
dangerous_hw_tests = ["hw_tests"]
network = ["dep:reqwest"]

[dependencies]
libc = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
iocuddle = "0.1.1"
static_assertions = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
codicon = "3.0"
rand = "0.8"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
bitfield = "^0.13"
bitflags = "1.2"
dirs = "5.0"
log = "0.4"
bincode = "1.3"
reqwest = { version = "0.11", features = ["json"], optional = true }
serde_bytes = "0.11.8"
hex = "0.4.3"

[dev-dependencies]
serial_test = "2.0"
test-log = "0.2"
